--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
+    "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "fuse.js": "^7.0.0",
