--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
+    "sleepydogs": "^1.0.3",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.0",
     "zustand": "^4.4.6"
