feat: removes dead code

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm-run-all package:clean summarize-articles package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
     "package:clean": "rm -rf build",
-    "package:compileBuildScript": "webpack --config webpack/webpack.build-script.cjs",
-    "package:buildMarkup": "node .build-process/main.cjs",
-    "package:cleanTmp": "rm -rf .build-process/",
+    "package:compileBuildScript": "webpack --config webpack/webpack.xng.cjs",
+    "package:buildMarkup": "node .xng/main.cjs",
+    "package:cleanTmp": "rm -rf .xng/",
     "package:bundleJs": "webpack --config webpack/webpack.prod.cjs",
     "package:copyAssets": "cp -R node_modules/heller-2-lite/build/css/* src/styles/* assets/* favicons/* build/web",
     "dev:HOME": "REQUEST_PAGE=\"@mint-home-page\" webpack serve --config webpack/webpack.dev.cjs",
@@ -47,7 +47,7 @@
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
-    "sleepydogs": "^1.0.3",
+    "sleepydogs": "^1.0.4",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.0",
     "zustand": "^4.4.6"
