--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "packageManager": "pnpm@8.15.8",
   "scripts": {
     "format": "prettier --write server src webpack build.tsx",
+    "lint:web": "eslint --config .eslintrc.web.cjs \"src/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
+    "lint:web-fix": "eslint --config .eslintrc.web.cjs --fix \"src/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
+    "lint:node": "eslint --config .eslintrc.node.cjs \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
+    "lint:node-fix": "eslint --config .eslintrc.node.cjs --fix \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
+    "lint": "run-p lint:node lint:web",
+    "lint:fix": "run-p lint:node-fix lint:web-fix", 
     "summarize-articles": "node scripts/summarize.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm-run-all package:clean summarize-articles package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
@@ -71,10 +77,19 @@
     "@types/react-dom": "^18.2.15",
     "@types/react-syntax-highlighter": "^15.5.10",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "autocannon": "^7.14.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.34.1",
     "html-webpack-plugin": "^5.5.3",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.1.5",
@@ -82,7 +97,7 @@
     "prettier": "^3.0.3",
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
