--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint:web-fix": "eslint --config .eslintrc.web.cjs --fix \"src/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
     "lint:node": "eslint --config .eslintrc.node.cjs \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
     "lint:node-fix": "eslint --config .eslintrc.node.cjs --fix \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
-    "lint": "run-p lint:node lint:web",
-    "lint:fix": "run-p lint:node-fix lint:web-fix", 
+    "lint": "run-p -c lint:node lint:web",
+    "lint:fix": "run-p -c lint:node-fix lint:web-fix", 
     "summarize-articles": "node scripts/summarize.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm-run-all package:clean summarize-articles package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
