--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "lint:node": "eslint --config .eslintrc.node.cjs \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
     "lint:node-fix": "eslint --config .eslintrc.node.cjs --fix \"server/**/*.{js,jsx,mjs,cjs,ts,tsx}\"",
     "lint": "run-p -c lint:node lint:web",
-    "lint:fix": "run-p -c lint:node-fix lint:web-fix", 
+    "lint:fix": "run-p -c lint:node-fix lint:web-fix",
     "summarize-articles": "node scripts/summarize.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm-run-all package:clean summarize-articles package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
+    "build": "npm-run-all package:clean summarize-articles package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyCss package:copyAssets",
     "package:clean": "rm -rf build",
     "package:compileBuildScript": "webpack --config webpack/webpack.xng.cjs",
     "package:buildMarkup": "node .xng/main.cjs",
     "package:cleanTmp": "rm -rf .xng/",
     "package:bundleJs": "webpack --config webpack/webpack.prod.cjs",
-    "package:copyAssets": "cp -R node_modules/heller-2-lite/build/css/* src/styles/* assets/* favicons/* build/web",
+    "package:copyCss": "node src/postcss/index.mjs && cp -R node_modules/heller-2-lite/build/css/* build/web",
+    "package:copyAssets": "cp -R src/styles/*.*tf assets/* favicons/* build/web",
     "dev:HOME": "REQUEST_PAGE=\"@mint-home-page\" webpack serve --config webpack/webpack.dev.cjs",
     "dev:BROWSE": "REQUEST_PAGE=\"@mint-browse-page\" webpack serve --config webpack/webpack.dev.cjs",
     "dev:ARTICLE": "REQUEST_PAGE=\"@mint-main-article-page\" webpack serve --config webpack/webpack.dev.cjs",
@@ -79,8 +80,10 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "autocannon": "^7.14.0",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "cssnano": "^7.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -90,10 +93,12 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1",
+    "glob": "^10.3.12",
     "html-webpack-plugin": "^5.5.3",
     "json-loader": "^0.5.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^10.2.3",
+    "postcss": "^8.4.38",
     "prettier": "^3.0.3",
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
