--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
     "classnames": "^2.3.2",
     "fuse.js": "^7.0.0",
     "gsap": "^3.12.2",
-    "heller-2-lite": "^0.0.19",
-    "heller-2-react": "^0.0.6",
+    "heller-2-lite": "^0.0.21",
+    "heller-2-react": "^0.0.8",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
     "pino": "^8.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
@@ -76,6 +77,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-modal": "^3.16.3",
     "@types/react-syntax-highlighter": "^15.5.10",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
