feat(Home): Adds react-lottie, adds Home Animation, adds ScreenContext adds debounced handler on window resize

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "debounce": "^2.0.0",
     "fuse.js": "^7.0.0",
     "gsap": "^3.12.2",
     "heller-2-lite": "^0.0.21",
@@ -50,6 +51,7 @@
     "pino": "^8.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-rough-notation": "^1.0.5",
@@ -77,6 +79,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-lottie": "^1.2.10",
     "@types/react-modal": "^3.16.3",
     "@types/react-syntax-highlighter": "^15.5.10",
     "@types/uuid": "^9.0.7",
