--- a/package.json
+++ b/package.json
@@ -49,15 +49,15 @@
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
     "pino": "^8.16.1",
-    "react": "19.0.0-beta-4508873393-20240430",
-    "react-dom": "19.0.0-beta-4508873393-20240430",
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-lottie": "^1.2.4",
     "react-markdown": "^8.0.7",
     "react-modal": "^3.16.1",
     "react-rough-notation": "^1.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
-    "sleepydogs": "^1.0.5",
+    "sleepydogs": "^1.0.7",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.0",
     "zustand": "^4.4.6"
@@ -87,6 +87,7 @@
     "autocannon": "^7.14.0",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
+    "babel-plugin-react-compiler": "0.0.0-experimental-c23de8d-20240515",
     "css-loader": "^6.8.1",
     "cssnano": "^7.0.1",
     "dotenv": "^16.3.1",
@@ -98,6 +99,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-53bb89e-20240515",
     "glob": "^10.3.12",
     "html-webpack-plugin": "^5.5.3",
     "json-loader": "^0.5.7",
